Fix height of Contact page
Since the height of the mein vody was not fit to the page, I fixed it to
the right heigt.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,9 @@ a img {
 	height: 4.0rem;
 	background-color: #222;
 }
-.main {
+.top_main {
 	height: calc(100vh - 17.2rem - 25vw);
+}
+.contact_main {
+	height: calc(100vh - 46.8rem)
 }
